array.island.Island.scala.error
Erreur de compilation :
Island:9: error: value < is not a member of Array[Int]
         if( max < liste(i) ){
                 ^Island:23: error: type mismatch;
 found   : Array[Int]
 required: Int
    return max(num);
              ^